--- a/css/reset.css
+++ b/css/reset.css
@@ -62,3 +62,118 @@ body {
     font-variation-settings: "wdth" 100;
     color: var(--color-whithe-gray);
 }
+
+
+/* Nav */
+nav {
+    position: absolute;
+    width: 100%;
+}
+
+.nav {
+    position: relative;
+    width: 100%;
+    max-width: 1536px;
+    margin: 0 auto;
+
+    .nav-items {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: .5rem;
+        font-size: 1.8rem;
+
+        .logo {
+            font-size: 4rem;
+            color: var(--color-whithe);
+        }
+    }
+
+    .nav-items button:hover,
+    .nav-links :hover {
+        color: var(--color-whithe);
+    }
+
+    .nav-links {
+        position: absolute;
+        right: 0;
+        display: none;
+        flex-direction: column;
+        align-items: end;
+        gap: .5rem;
+        padding: .5rem;
+        margin-top: -30px;
+    }
+
+    .nav-links.show-links {
+        display: flex;
+        right: 0;
+    }
+
+    .show-nav {
+        color: var(--color-whithe);
+    }
+
+    @media (min-width: 768px) {
+        .nav-items button {
+            display: none;
+        }
+
+        .nav-links {
+            margin-top: 0;
+            display: flex;
+            flex-direction: row;
+            top: 0;
+            bottom: 0;
+            left: 90px;
+            align-items: center;
+            justify-content: end;
+        }
+    }
+
+    @media (min-width: 1024px) {
+
+        .nav-items,
+        .nav-links {
+            padding: 0 40px;
+        }
+    }
+}
+
+
+/* Footer */
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    padding: 5rem 0;
+
+    h2 {
+        font-size: 3rem;
+        font-weight: bolder;
+        color: var(--color-whithe);
+    }
+
+    .footer-social {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: .2rem;
+
+        ul {
+            display: flex;
+            gap: .5rem;
+            font-size: 1.5rem;
+
+            li:hover {
+                color: var(--color-whithe);
+            }
+        }
+    }
+
+    span:last-child {
+        font-size: .8rem;
+        font-weight: 300;
+    }
+}
