--- a/css/utilities.css
+++ b/css/utilities.css
@@ -13,12 +13,13 @@
     text-overflow: ellipsis;
 }
 
+
 /* Buttons */
 .button-28 {
     appearance: none;
     background-color: transparent;
     border: 2px solid var(--color-whithe);
-    border-radius: 15px;
+    border-radius: 10px;
     box-sizing: border-box;
     color: var(--color-whithe);
     cursor: pointer;
@@ -55,3 +56,10 @@
     box-shadow: none;
     transform: translateY(0);
 }
+
+
+/* Shadows */
+.s-34-w{
+    box-shadow: rgba(255, 255, 255, 0.05) 0px 0px 0px 1px;
+}
+
